For legacy desktop (or laptop) screens shorter than 864px, increase the frontpage welcome div margin to avoid overlap with the sign in and registration divs

--- a/theme/front-page/mixins.scss
+++ b/theme/front-page/mixins.scss
@@ -31,6 +31,12 @@
 	}
 }
 
+@mixin legacy-desktop {
+	@media only screen and (max-height : $legacy-desktop-height) {
+		@content;
+	}
+}
+
 @mixin phone {
 	@media only screen and (max-width : $phone-width) {
 		@content;
