--- a/theme/front-page/variables.scss
+++ b/theme/front-page/variables.scss
@@ -16,4 +16,5 @@ $lighter-grey-text: #969696;
 $max-width: 1280px;
 $tablet-width: 700px;
 $phone-width: 480px;
+$legacy-desktop-height: 864px;
 $fullpage-navigation-max-width: 800px;
